<resources>
    <string name="phone_required">Phone number is required</string>
    <string name="app_name">Alwar Mart</string>
    <string name="create_account">Create a new Account</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="read_more"><a href="https://crazy-studio-website.web.app/PrivacyPolicy.html">Read More</a></string>
    <string name="icon">Icon</string>
    <string name="otp">OTP</string>
    <string name="otp_title">OTP Verification</string>
    <string name="otp_button_text">VERIFY</string>
    <string name="resend_again_msg">Resend OTP</string>
    <string name="change">Change</string>
    <string name="phone_number">Phone Number</string>
    <string name="sent_to">Sent to</string>
    <string name="home">Home</string>
    <string name="shopping_carts">Shopping Carts</string>
    <string name="more">More</string>
    <string name="title_activity_home_main">HomeMainActivity</string>
    <string name="tap_to_search">Tap to Search</string>
    <string name="tap_to_add_new_product">Tap To add new Product</string>
    <string name="add_a_new_item">Add a new Item</string>
    <string name="quantity">Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="discount">Discount</string>
    <string name="product_mrp">Product MRP</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product name</string>
    <string name="tap_to_add_a_new_image">Tap to add a new Image</string>
    <string name="tap_to_save">Tap to Save</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="input_category">Input Category</string>
    <string name="ss" />
    <string name="in_stock">In Stock</string>
    <string name="add_to_wish_list">Add to Wish List</string>
    <string name="fast_shipping">Fast Shipping</string>
    <string name="net_quantity">Net Quantity</string>
    <string name="number_of_item">Number of Item</string>
    <string name="diet_type">Diet Type</string>
    <string name="category">Category</string>
    <string name="product_image">Product Image</string>
    <string name="product_details">Product Details</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="buy_it_again">Buy it Again</string>
    <string name="tap_to_remove">Tap to remove</string>
    <string name="tap_to_add_new_address">Tap to add new Address</string>
    <string name="current_location">Current location</string>
    <string name="address">Address</string>
    <string name="deliver_to_this_address">Deliver to this address</string>
    <string name="edit_address">Edit</string>
    <string name="user_name">User Name</string>
    <string name="tap_to_show_menu">Tap to show menu</string>
    <string name="edit">Edit</string>
    <string name="remove">remove</string>
    <string name="add_address">+ Add Address</string>
    <string name="select_a_payment_method">Select a payment method</string>
    <string name="address_not_found_please_a_add_new_address">Address not Found Please a add new address</string>
    <string name="cash_on_delivery_cod">Cash on delivery (COD)</string>
    <string name="go_next">-----)</string>
    <string name="select_a_payment">Pay using UPI Apps</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="free_standard_delivery">Free Standard delivery</string>
    <string name="delivered_on_today_as_per_fast">Delivered on Today as per fast</string>
    <string name="delivered_on_today_or_tomorrow">Delivered on Today or Tomorrow</string>
    <string name="_60_fast_delivery">₹30 Fast delivery</string>
    <string name="shipping">Shipping</string>
    <string name="all_tax_are_included">All Tax are included</string>
    <string name="total">Total</string>
    <string name="make_payment">Make Payment</string>
    <string name="buy_now">Buy Now</string>
    <string name="account">Account</string>
    <string name="check_order">My Orders</string>
    <string name="set_up_fast_pickup">Set Up fast Pickup</string>
    <string name="settings">Settings</string>
    <string name="continue_shipping">Continue Shopping</string>
    <string name="you_want_to_sign_up">you want to Sign-up</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_no">Phone No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="data_of_both">Date of Birth</string>
    <string name="order_details">Order Details</string>
    <string name="dummy_txt">coupon code not found</string>
    <string name="payment">Payment</string>
    <string name="dummy_shipping_to">Shipping to</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="dummy_shipping_method">DHL</string>
    <string name="billing_details">Billing Details</string>
    <string name="billing_details_shipping_details">Billing Details || Shipping details</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="order_delivery">Order delivery on</string>
    <string name="order">Order</string>
    <string name="you_save_upto">you save Upto</string>
    <string name="tap_back">Tap back</string>
    <string name="cancel">Cancel</string>
    <string name="tap_to_open_photo_gallery">Tap to open photo gallery</string>
    <string name="tap_to_open_camera">Tap to open Camera</string>
    <string-array name="typesSpinnerArray">
        <item>all</item>
        <item>Processing</item>
        <item>Confirmed</item>
        <item>Out for Delivery</item>
        <item>Delivered</item>
        <item>Cancelled</item>
        <item>Customer Rejected</item>
        <item>Customer Not Available</item>
    </string-array>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="sand_device_information">Sand device information</string>
    <string name="very_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="short_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ornare lacinia magna, sed eleifend dui aliquet sed."</string>
    <string name="very_short_text">Lorem Ipsum dolor sit amet</string>
    <string name="click_to_save_info">Click to Save Info</string>
    <string name="password">Password</string>
    <string name="verify_the_email">Verify the Email</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="save">SAVE</string>
    <string name="cancel_big">CANCEL</string>
    <string name="coupon_code">coupon code</string>
    <string name="product_info">Product Info</string>
    <string name="give_some_basic_information">give some basic information</string>
    <string name="chose_username">Chose username</string>
    <string name="you_can_change_latter">You can change latter</string>
    <string name="information">Information</string>
    <string name="choose_your_language">choose your language</string>
    <string name="change_your_language">Change your language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="product_recommendations">Product Recommendations</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="delivery_image">A delivery truck with parcels, subtly conveying the concept of delivery.\n</string>
    <string name="enter_pin_code">Enter PIN code</string>
    <string name="check_delivery_availability">Check Delivery Availability\t\t\t\t</string>
    <string name="top_category">Top Category</string>
    <string name="good_morning">Good morning</string>
    <string name="see_more">see more</string>
    <string name="search">Search</string>
    <string name="before_you_checkout">before you Checkout</string>
    <string name="tap_top_apply_coupon_code">Tap top apply Coupon code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="grand_total">Grand Total</string>
    <string name="remove_item">Remove item</string>
    <string name="apply">apply</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="add">ADD</string>
    <string name="place_order">Place Order</string>
    <string name="cod_amp_amp_upi"><![CDATA[(COD) && UPI]]></string>
    <string name="pay_using">Pay using</string>
    <string name="be_use_to_assist_delivery">be use to assist delivery</string>
    <string name="e_g_near_hospital">E.g near hospital</string>
    <string name="state">State</string>
    <string name="alwar">Alwar</string>
    <string name="town_city">Town/City</string>
    <string name="notes">Notes</string>
    <string name="close">Close</string>
    <string name="on_the_time_of_delivery_you_can_pay_with_upi">On the time of delivery, you can pay with UPI</string>
    <string name="view_order_status">View Order Status</string>
    <string name="you_have_successfully_made_order">You have successfully made order</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="top_selling_products">top selling products</string>
    <string name="dairy">Dairy</string>
    <string name="for_you_teeth">for you teeth</string>
    <string name="drinks">drinks</string>
    <string name="chips_and_snacks">chips and snacks</string>
    <string name="description">Description</string>
    <string name="process_fee">process fee</string>
    <string name="request_to_call">Request to Call</string>
    <string name="language">language</string>
    <string name="see_all">see all</string>
    <string name="dabur">DABUR</string>
    <string name="itc">ITC</string>
    <string name="go_to_current_location">Go to current location</string>
    <string name="explore_all_products">Explore all products</string>
    <string name="inclusive_of_all_taxes">(Inclusive of all taxes)</string>
    <string name="similar_products">Similar products</string>
    <string name="secure_delivery">Secure Delivery</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="get_your_products_delivered_swiftly_and_on_time_every_time">Get your products delivered swiftly and on time, every time.</string>
    <string name="genuine_products">Genuine Products</string>
    <string name="our_customer_support">Our customer support is available 24/7 to assist you with any queries or issues.</string>
    <string name="customer_support">Customer Support</string>
    <string name="customer_support_email">Email: help@alwarmart.com</string>
    <string name="continue_text">Continue</string>
</resources>