<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_90sdp"
    android:gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="@dimen/_19sdp"
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_photo_camera_black_48dp"
            android:contentDescription="@string/tap_to_open_camera" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/camera"
            android:layout_marginStart="@dimen/_9sdp"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_photo_black_48dp"
            android:contentDescription="@string/tap_to_open_photo_gallery" />

        <TextView
            android:id="@+id/CANCEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/photo"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_below="@id/photo"
            android:text="@string/cancel"
            android:textColor="@color/FixColorCancelTextColor" />
    </RelativeLayout>
</LinearLayout>
