<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/MainTextColor"
        android:textColorHint="@color/MainTextColor"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:background="@color/MainBackgroundColor"
            android:id="@+id/editTextName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/MainTextColor"
        android:textColorHint="@color/MainTextColor"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:background="@color/MainBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:textColor="@color/MainTextColor"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/MainTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSubject"
            android:layout_width="match_parent"
            android:background="@color/MainBackgroundColor"
            android:layout_height="wrap_content"
            android:hint="@string/subject"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/MainTextColor"
        android:textColorHint="@color/MainTextColor"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:background="@color/MainBackgroundColor"
            android:layout_height="wrap_content"
            android:hint="@string/message"/>

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_height="match_parent"
        android:text="@string/sand_device_information"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_height="wrap_content"
        android:text="Submit"/>

</LinearLayout>
