<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/MainBackgroundColor"
    android:layout_height="match_parent"
    tools:context=".Fragment.PinCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@drawable/truck_bg"

        android:layout_height="@dimen/_340sdp">

        <ImageView
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:id="@+id/IamgeView"
            android:src="@drawable/ic_secure_delivery"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_280sdp"
            android:scaleType="fitXY"
            android:contentDescription="@string/delivery_image"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="2dp"
        android:id="@+id/error"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/FixRed"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pinCodeTextInputLayout"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_15sdp"
        app:helperText="@string/check_delivery_availability"
        android:layout_height="wrap_content"
        android:hint="@string/enter_pin_code"
        app:counterEnabled="true"
        app:counterMaxLength="6">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="@dimen/_12sdp"
            android:background="@drawable/number"
            android:textStyle="bold"
            android:textColor="@color/MainTextColor"
            android:id="@+id/pinCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:text="@string/continue_text"
        android:textSize="@dimen/_13ssp"
        android:enabled="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:id="@+id/next_btn"
        android:background="@drawable/round_button"
        android:textColor="@color/FixColorWhite"
        android:backgroundTint="@color/green_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>






</LinearLayout>