<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/MainTextColor"
        android:textSize="@dimen/_19ssp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/verify_the_email"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:hint="🔴Error🔴"
        android:maxLength="20"
        android:minHeight="48dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="end"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/email"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cancel_big"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textSize="@dimen/_25ssp"
            android:layout_width="wrap_content"
            android:textColor="@color/CancelTextColor"
            android:id="@+id/CANCEL"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/save"
            android:textColor="@color/SaveTextColor"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_width="wrap_content"
            android:id="@+id/save"
            android:textSize="@dimen/_25ssp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>